# advent_of_code

./: .gitignore
2023/day02/: day02.py
2023/day03/: day03.py
2023/day05/: day05.py
aoc-2023/day01/: day01.py
aoc-2023/day04/: day04.py  day04_old.py
aoc_2023/: run.sh
aoc_2024/: aoc_2024.opam  dune-project
aoc_2024/day01/: day01.ml  dune
aoc_2024/day02/: day02.analyse  day02.ml  day02.py  day02.temp  dune
aoc_2024/day03/: day03.ml  dune
aoc_2024/day04/: day04.ml  dune
aoc_2024/day05/: day05.ml  dune
aoc_2024/day06/: day06.ml  dune
